# microbiome_analysis_api

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  enterotype_otu_table_metadata.csv  frontend.py  pyproject.toml
app/: main.py
app/api/endpoints/: correlation.py  diversity.py  upload.py
app/models/: schemas.py
app/services/: correlation_analysis.py  diversity_analysis.py
app/utils/: parsers.py
frontend/sample_data/: gut_microbiome_example.csv  gut_microbiome_example.json
sample_data/: enterotype_subset.csv  enterotype_subset_v2.csv  gut_microbiome_example.json
tests/: test_correlation_analysis.py  test_diversity_metrics.py  test_endpoints.py  test_frontend.py  test_services.py  test_upload.py
