[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microbiome_analysis_api"
version = "0.1.0"
description = "Microbiome Data Analysis API"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "python-multipart"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "scikit-bio",
    
]