[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microbiome_analysis_api"
version = "0.1.0"
description = "Microbiome Data Analysis API"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "pydantic",
    "httpx",
    "python-multipart",
    "scikit-bio",
]

[project.optional-dependencies]
backend = [
    "fastapi",
    "uvicorn",
]
frontend = [
    "streamlit",
    "matplotlib",
    "seaborn",
    "plotly",
    "networkx",
    "scikit-learn",
]
dev = [
    "pytest",
    "isort",
    "black",
    "flake8",
    "pre-commit",
    "hypothesis",
]
all = ["microbiome_analysis_api[backend,frontend,dev]"]

[tool.black]
line-length = 88

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
markers = [
    "frontend: mark tests related to the frontend module",
]
